# task_manager

./: .env  README.md  db.sqlite3  docker-compose.yaml  dockerfile  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
tasks/: admin.py  endpoints.py  managers.py  models.py  serializers.py  sql_tests.py  urls.py
tasks/migrations/: 0001_create_model_user.py  0001_create_user_model.py  0002_create_model_tast.py
